--- a/Autoverhuur/Autoverhuur.csproj
+++ b/Autoverhuur/Autoverhuur.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="xunit.extensibility.core" Version="2.9.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Databank\" />
+  </ItemGroup>
+
 </Project>
